@@ -1,3 +1,8 @@
+2001-03-26  Jochen Wiedmann <joe@ispsoft.de> (0.2014)
+
+	* lib/RPC/PlClient.pm: Documentation fixes
+	  Joel Meulenberg <joelmeulenberg@yahoo.com>
+
 2001-01-23  Jochen Wiedmann <joe@ispsoft.de> (0.2014)
 
 	* lib/RPC/PlServer.pm: Changed DES->new to Crypt::DES->new.
